crates/auryn-compiler/tests/snapshots/diagnostic_tests__ui@circular_alias.au.snap
---
source: crates/auryn-compiler/tests/diagnostic_tests.rs
expression: "type A = B\ntype B = []A\n\nfn main() {}\n"
input_file: crates/auryn-compiler/tests/inputs/diagnostics/circular_alias.au
---
Error: Circular type alias
   ╭─[ main:2:6 ]
   │
 1 │ type A = B
   │      ┬  
   │      ╰── Because it includes this type, which causes the circular reference
 2 │ type B = []A
   │      ┬  
   │      ╰── A type alias must not refer to itself
───╯
